@@ -5,6 +5,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian and Slovak translati
 .......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)
 
 Bug fixes:
+..F....... [ZBX-5077] fixed percentile calculation formula and corrected accessed index, by which value is selected (arvids)
 A......... [ZBX-8486] fixed re-linking templates with web scenarios (Krists)
 ..F....... [ZBX-8863] fixed ad-hoc graphs with multiple items for the same host not showing the hosts name (arvids)
 ..F....... [ZBX-8919] fixed range selection in graphs in IE10 and IE11 (arvids)
@@ -497,6 +498,7 @@ New features:
 A.F....... [ZBX-1357] updated Brazilian Portuguese, Polish and Russian translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-5077] fixed percentile calculation formula and corrected accessed index, by which value is selected (arvids)
 A......... [ZBX-8486] fixed re-linking templates with web scenarios (Krists)
 ..F....... [ZBX-8919] fixed range selection in graphs in IE10 and IE11 (arvids)
 A......... [ZBX-9017] fixed hostgroup.create and hostgroup.update API calls allowing setting readonly "internal" param (arvids)
@@ -1651,6 +1653,7 @@ New features:
 A.F....... [ZBX-1357] updated Italian, Polish and Spanish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-5077] fixed percentile calculation formula and corrected accessed index, by which value is selected (arvids)
 ........S. [ZBX-8952] fixed bug where an action condition of matching parent templates of a trigger worked with only the first template (Juris)
 .D........ [ZBX-6542] updated description of HousekeepingFrequency parameter in the default server and proxy configuration files (Sasha)
 .......PS. [ZBX-8833] fixed dynamic SNMP item cache working incorrectly for hosts with multiple SNMP interfaces (asaveljevs)
